syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Services.TypeTestingServices";

package grpc_server.api.protos.services.type_testing_services;

service ForLong {
    rpc Operation (ForLongOperationRequest) returns (google.protobuf.Int64Value);
    rpc OperationCollection (ForLongOperationCollectionRequest) returns (messages.ListOfInt64);
    rpc OperationNullable (ForLongOperationNullableRequest) returns (google.protobuf.Int64Value);
    rpc OperationNullableCollection (ForLongOperationNullableCollectionRequest) returns (messages.ListOfInt64);
}

message ForLongOperationRequest {
    int64 param = 1;
}

message ForLongOperationCollectionRequest {
    repeated int64 param = 1;
}

message ForLongOperationNullableRequest {
    google.protobuf.Int64Value param = 1;
}

message ForLongOperationNullableCollectionRequest {
    messages.ListOfInt64 param = 1;
}
